--- a/index.html
+++ b/index.html
@@ -9,8 +9,22 @@
     <title>etch a sketch</title>
 </head>
 <body>
-    <div id="container">
-      
+    <header id="header">
+        <h1 id="title">Etch a sketch</h1>
+    </header>
+    <div id="main">
+        <div id="container">
+        
+        </div>
+
+        <div id="settings">
+            <input id="colorPicker" type="color" value="#000000">
+            <button id="color">Color</button>
+            <button id="clear">Clear</button>
+            <button id="eraser">Eraser</button>
+            <div id="sizeValue" class="size-value">16 x 16</div>
+            <input id="sizeSlider" type="range" value="16" min="1" max="100" />
+        </div>
     </div>
 </body>
 </html> 
