--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
         <div id="settings">
             <input id="colorPicker" type="color" value="#000000">
             <button id="color">Color</button>
+            <button id="rainbow">Rainbow</button>
+            <button id="shader">Shader</button>
             <button id="clear">Clear</button>
             <button id="eraser">Eraser</button>
             <div id="sizeValue" class="size-value">16 x 16</div>
             <input id="sizeSlider" type="range" value="16" min="1" max="100" />
+            <h3>Shader slider</h3>
+            <input id="shaderSlider" type="range" value="5" min="1" max="100" />
         </div>
     </div>
 </body>
