--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button id="eraser">Eraser</button>
             <div id="sizeValue" class="size-value">16 x 16</div>
             <input id="sizeSlider" type="range" value="16" min="1" max="100" />
-            <h3 id="shaderValue">Shader slider</h3>
+            <h3 id="shaderValue">Shade 5%</h3>
             <input id="shaderSlider" type="range" value="5" min="1" max="100" />
         </div>
     </div>
