--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <button id="rainbow">Rainbow</button>
             <button id="shader">Shader</button>
             <button id="eraser">Eraser</button>
+            <button id="save">Save</button>
             <div id="sizeValue" class="size-value">16 x 16</div>
             <input id="sizeSlider" type="range" value="16" min="1" max="100" />
             <h3 id="shaderValue">Shade 5%</h3>
